--- a/src/Cliente/InterfazCliente.form
+++ b/src/Cliente/InterfazCliente.form
@@ -119,7 +119,7 @@
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="lblTurno" min="-2" pref="273" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
-                                  <Component id="lblNombre" min="-2" pref="273" max="-2" attributes="0"/>
+                                  <Component id="lblNombreJugador" min="-2" pref="273" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -145,7 +145,7 @@
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="lblTurno" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
-                              <Component id="lblNombre" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
+                              <Component id="lblNombreJugador" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
                           </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" attributes="0">
@@ -336,7 +336,7 @@
             <Property name="text" type="java.lang.String" value="Dinero:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="lblNombre">
+        <Component class="javax.swing.JLabel" name="lblNombreJugador">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="18" style="1"/>
